2004-12-25  0.8.1.47  Etan Reisner <deryni@eden.rutgers.edu>
	* server/gtk/gnocatan-server-gtk.c, client/gtk/gui.c: Replaced GNOME
	about dialog with Gtk code.

2004-12-25  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/discard.c, client/gtk/resource.c, client/common/client.c:
	Removed usused variable
	* server/player.c: Removed unused code.
	* common/state.c, common/state.h: Added stack dump code.
	* server/player.c: Added stack names when restoring the disconnect
	player.

2004-12-21  0.8.1.46   Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Renamed configure.in to the more modern configure.ac
	* autogen.sh: Changed configure.in to configure.ac

2004-12-19  Etan Reisner <deryni@eden.rutgers.edu>
	* ai/client.c, common/gtk/select-game.c,
	meta-server/gnocatan-meta-server.c, server/gtk/gnocatan-server-gtk.c:
	Using g_strdup instead of strdup
	* client/common/callback.c, server/gnocatan-server-console.c: Removing
	unused/duplicate #include lines

004-12-03  0.8.1.45  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/resource-table.c, client/gtk/resource-table.h,
	client/gtk/Makefile.am: Added a simple way to add a selection for
	resources in the client.
	* client/gtk/frontend.c: Reenabled the workaround for a Gtk+ bug.
	* client/common/player.c: A leaving player is a normal message, not an
	error message.
	* client/common/client.c, client/gtk/interface.c, server/discard.c,
	server/pregame.c, server/server.h: Fixed reconnect in state DISCARD
	and YOUAREROBBER.
	* client/gtk/discard.c: Using the new resource-table widget, and
	removed deprecated gtk_clist.
	* client/gtk/frontend.h, client/gtk/player.c: Made player_create_icon
	accessible to other source files.
	* client/gtk/gui.c(gui_set_game_params): Initially the map pixmap was
	too small. (Debian bug #284063)

2004-11-28  0.8.1.44  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.h: Fix for the macro that would have bad side effects
	when used in if statements